[package]
name = "buckle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "buckle"

[dependencies]
clap = { version = "4.3.1", features = ["cargo", "env", "string"] }
directories-next = "2.0"
dunce = "1.0"
futures = "0.3"
gethostname = "0.4"
gtmpl = "0.7"
human-errors = "0.1.3"
http = "0.2"
itertools = "0.10"
lazy_static = "1.4"
nix = "0.26.2"
once_cell = "1.18"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12", features = ["tls-roots"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots", "json", "blocking"] }
rustls = "0.21"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
solvent = "0.8"
shell-words = "1.1"
tokio = "1"
tonic = { version = "0.9.2", features = ["tls-roots"] }
tracing = { git="https://github.com/SierraSoftworks/tracing.git" , features = ["log"] }
tracing-attributes = { git="https://github.com/SierraSoftworks/tracing.git" }
tracing-futures = { git="https://github.com/SierraSoftworks/tracing.git" , features = ["futures-03"] }
tracing-opentelemetry = { git="https://github.com/SierraSoftworks/tracing.git" }
tracing-subscriber = { git="https://github.com/SierraSoftworks/tracing.git" , features = ["tracing-log"] }
walkdir = "2.3"
webpki-roots = "0.23"

[dev-dependencies]
mocktopus = { git = "https://github.com/notheotherben/mocktopus.git" }
tempfile = "3.5"

[profile.release]
debug = true