[package]
name = "buckle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "buckle"

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "env", "string"] }
directories-next = "2.0"
dunce = "1.0"
futures = "0.3"
gethostname = "1.1"
gtmpl = "0.7"
human-errors = "0.2.3"
http = "1.4"
itertools = "0.14"
lazy_static = "1.5"
nix = "0.31.3"
once_cell = "1.21"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots", "json", "blocking"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
solvent = "0.8"
shell-words = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["opentelemetry"] }
walkdir = "2.5"
webpki-roots = "1.0"

[dev-dependencies]
mocktopus = { git = "https://github.com/notheotherben/mocktopus.git" }
tempfile = "3.27"
tracing-subscriber = "0.3"

[profile.release]
debug = true